LCA out of city address and yml updates

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -80,5 +80,5 @@ jobs:
     - name: Run all tests
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --headless --browser=chrome --rs -v -s -n=6 --reruns=2 --reruns-delay=1
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2
         
