--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,11 @@
-name: QA Regression
+name: Prod Smoke Test
 
 on:
   #push:
   #  branches:
   #    - master
+  schedule:
+    - cron: '0 11 * * *'  # At 11:00 AM UTC, every day
   workflow_dispatch:
 
 jobs:
@@ -14,68 +16,66 @@ jobs:
       CATALOG_USERNAME: ${{ secrets.CATALOG_USERNAME}}
       CATALOG_PASSWORD: ${{ secrets.CATALOG_PASSWORD}}
       LCA_PASSWORD: ${{ secrets.LCA_PASSWORD}}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL}}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 6
       matrix:
-        python-version: ["3.10"] 
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v4
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: Setup Chrome and ChromeDriver
       uses: browser-actions/setup-chrome@latest
       with:
         chrome-version: stable
-
-    - name: Install Flake8
-      run: pip install flake8
-
-    - name: Run Flake8 Linter
-      continue-on-error: true
-      run: flake8 examples/nypl_tests --max-line-length=120 --statistics --count || true
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade wheel
         pip install -r requirements.txt
-
     - name: Install SeleniumBase
       run: |
         python setup.py install
-
     - name: Update SeleniumBase
       run: |
         pip install -U seleniumbase
-
     - name: Check the console scripts interface
       run: |
         seleniumbase
         sbase
-
     - name: Make sure pytest is working
       run: |
         echo "def test_1(): pass" > nothing.py
         pytest nothing.py
-
     - name: Make sure nosetests is working
       run: |
         echo "def test_2(): pass" > nothing2.py
-        nosetests nothing2.py    
-    
-    
-    # NYPL tests start here
-    # footer, header, blog, blog all, book lists, campaigns, exhibitions, locations, articles & databases, home, give, schwarzman
+        nosetests nothing2.py
+        
 
-    - name: Run all tests
+    - name: Send GitHub Action trigger data to Slack workflow
+      id: slack
+      uses: slackapi/slack-github-action@v1.24.0
+      if: failure()
+      with:
+        # This data can be any valid JSON from a previous step in the GitHub Action
+        payload: |
+          {
+            "property": "DXP RENO",
+            "test_repo": "https://github.com/NYPL/seleniumbase_reno/actions"
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+
+    - name: Run test
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 --env=qa
-        
+        pytest examples/nypl_tests --headless -m test
+
