--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -80,5 +80,6 @@ jobs:
     - name: Run all tests
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 -m "not test"
+
         
