--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -77,5 +77,5 @@ jobs:
     - name: Run all tests
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 --env=qa
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 --env=qa -m "not test"
         
