--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -77,6 +77,7 @@ jobs:
     - name: Run smoke test
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 -m smoke
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 -m "smoke and not test"
+
 
         
