--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Run test
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --headless -m test
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 -m "test and lca"
