--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 6
+      max-parallel: 25
       matrix:
         python-version: ["3.10"]
 
@@ -41,4 +41,4 @@ jobs:
     - name: Run test
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 -m "test and lca"
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 --env=qa -m "test and lca"
