--- a/.github/workflows/lca.yml
+++ b/.github/workflows/lca.yml
@@ -9,10 +9,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-#        instance: [ 1, 2, 3, 4, 5]
-        instance: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
-                   11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
-                   21, 22, 23, 24, 25]
+        instance: [1]
+#        instance: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
+#                   11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
+#                   21, 22, 23, 24, 25]
 
     env:
       PY_COLORS: "1"
