--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -1,23 +1,21 @@
 name: Prod Smoke
 
 on:
-  #push:
-  #  branches:
-  #    - master
   schedule:
     - cron: '0 11 * * *'  # At 11:00 AM UTC, every day
   workflow_dispatch:
 
 jobs:
   build:
-
     env:
       PY_COLORS: "1"
-      CATALOG_USERNAME: ${{ secrets.CATALOG_USERNAME}}
-      CATALOG_PASSWORD: ${{ secrets.CATALOG_PASSWORD}}
-      LCA_PASSWORD: ${{ secrets.LCA_PASSWORD}}
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL}}
+      CATALOG_USERNAME: ${{ secrets.CATALOG_USERNAME }}
+      CATALOG_PASSWORD: ${{ secrets.CATALOG_PASSWORD }}
+      LCA_PASSWORD: ${{ secrets.LCA_PASSWORD }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       max-parallel: 60
@@ -26,45 +24,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Setup Chrome and ChromeDriver
       uses: browser-actions/setup-chrome@latest
       with:
         chrome-version: stable
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade wheel
+        python -m pip install --upgrade pip wheel
         pip install -r requirements.txt
-    - name: Install SeleniumBase
-      run: |
-        python setup.py install
-    - name: Update SeleniumBase
-      run: |
         pip install -U seleniumbase
-    - name: Check the console scripts interface
-      run: |
-        seleniumbase
-        sbase
-    - name: Make sure pytest is working
-      run: |
-        echo "def test_1(): pass" > nothing.py
-        pytest nothing.py
-    - name: Make sure nosetests is working
-      run: |
-        echo "def test_2(): pass" > nothing2.py
-        nosetests nothing2.py
-        
 
-    - name: Send GitHub Action trigger data to Slack workflow
-      id: slack
-      uses: slackapi/slack-github-action@v1.24.0
+    - name: Run smoke test
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests --pspec --headless -n=60 --reruns=2 --reruns-delay=2 -m "smoke and not test"
+
+    - name: Send Slack notification on failure
       if: failure()
+      uses: slackapi/slack-github-action@v1.24.0
       with:
-        # This data can be any valid JSON from a previous step in the GitHub Action
         payload: |
           {
             "property": "DXP RENO",
@@ -72,12 +57,3 @@ jobs:
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-
-    - name: Run smoke test
-      continue-on-error: true
-      run: |
-        pytest examples/nypl_tests --pspec --headless -n=60 --reruns=2 --reruns-delay=2 -m "smoke and not test"
-
-
-        
