--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -18,7 +18,6 @@ jobs:
 
     strategy:
       fail-fast: false
-      max-parallel: 60
       matrix:
         python-version: ["3.10"]
 
@@ -44,7 +43,7 @@ jobs:
     - name: Run smoke test
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n=60 --reruns=2 --reruns-delay=2 -m "smoke and not test"
+        pytest examples/nypl_tests --pspec --headless -n auto --reruns=2 --reruns-delay=2 -m "smoke and not test"
 
     - name: Send Slack notification on failure
       if: failure()
