--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -44,4 +44,4 @@ jobs:
     - name: Run all tests
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --pspec --headless -n auto --reruns=2 --reruns-delay=2 --env=qa -m "not test"
+        pytest examples/nypl_tests --pspec --headless -n=6 --reruns=2 --reruns-delay=2 --env=qa -m "not test"
