--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# junk files
+__pycache__/
+*.pyc
+.DS_Store
+
+
 # Environment and Secret Files
 .env
 
@@ -11,5 +17,5 @@ examples/nypl_tests/test_lca_imperva.py
 examples/nypl_tests/test_speakout_districts.py
 examples/nypl_tests/test_speakout_districts_2.py
 examples/nypl_tests/test_lca_2.py
-examples/nypl_tests/page_lca_2.py
+examples/nypl_pages/page_lca_2.py
 
