--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,7 @@ jobs:
       uses: slackapi/slack-github-action@v1.24.0
       with:
         # This data can be any valid JSON from a previous step in the GitHub Action
+        text: "Test Failed"
         payload: |
           {
             "property": "Reno",
