--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ examples/nypl_tests/pytestdebug.log
 examples/nypl_tests/test_lca_imperva.py
 examples/nypl_tests/test_speakout_districts.py
 examples/nypl_tests/test_speakout_districts_2.py
-examples/nypl_tests/test_lca_2.py
-examples/nypl_pages/page_lca_2.py
+#examples/nypl_tests/test_lca_2.py
+#examples/nypl_pages/page_lca_2.py
 
