--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pyotp==2.9.0
 markdown-it-py==3.0.0;python_version>="3.8"
 mdurl==0.1.2
 rich~=13.9.4
-pytest-pspec== 0.0.4
 
+pytest-spec==3.2.0
 seleniumbase~=4.32.12
 python-dotenv~=1.0.1
