--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -48,4 +48,4 @@ jobs:
 
     - name: Run Prod Regression tests on Firefox
       run: |
-        pytest examples/nypl_tests --headless --firefox -m "only_firefox"
+        pytest examples/nypl_tests --headless --firefox --reruns=2 -m "only_firefox"
