prod regression test yml update with LCA test disabled

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,6 +46,6 @@ jobs:
       run: |
         pytest examples/nypl_tests --spec --headless -n=6 --reruns=2 --reruns-delay=2 -m "not test and not qa and not only_firefox"
 
-    - name: Run Prod Regression tests on Firefox
-      run: |
-        pytest examples/nypl_tests --headless --firefox --reruns=2 -m "only_firefox"
+#    - name: Run Prod Regression tests on Firefox
+#      run: |
+#        pytest examples/nypl_tests --headless --firefox --reruns=2 -m "only_firefox"
