--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,8 @@
 name: Test
 
 on:
+  schedule:
+    - cron: '0 11 * * *'  # At 11:00 AM UTC, every day
   workflow_dispatch:
 
 jobs:
@@ -13,6 +15,7 @@ jobs:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
@@ -27,45 +30,57 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Setup Chrome and ChromeDriver
-      uses: browser-actions/setup-chrome@v1
+      uses: browser-actions/setup-chrome@latest
       with:
         chrome-version: stable
 
     - name: Install dependencies
       run: |
-        sudo apt-get update && sudo apt-get install -y jq
         python -m pip install --upgrade pip wheel
         pip install -r requirements.txt
-        pip install -U seleniumbase pytest-json-report
+        pip install -U seleniumbase
 
-    - name: Run tests
+    - name: Run smoke tests on Chrome
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --spec --headless -n auto --reruns=0 --reruns-delay=2 -m test --json-report --json-report-file=report.json
+        pytest examples/nypl_tests --spec --headless -n=6 --reruns=2 --reruns-delay=2 -m "smoke and not only_firefox"
 
-    - name: List report files
-      if: always()
-      run: ls -l
-
-    - name: Parse JSON Report
-      id: parse_report
-      if: always()
+    - name: Setup Firefox and Geckodriver
       run: |
-        echo "Parsing JSON report..."
-        python -c "import json; import os; f = open('report.json'); report = json.load(f); f.close(); failed_tests = [test['nodeid'] for test in report['tests'] if test['outcome'] == 'failed']; failed_tests_str = ','.join(failed_tests); output_path = os.environ['GITHUB_OUTPUT']; gh_output = open(output_path, 'a'); gh_output.write(f'failed_tests={failed_tests_str}\\n'); gh_output.close()"
+        sudo apt-get update
+        sudo apt-get install -y firefox
+        wget https://github.com/mozilla/geckodriver/releases/download/v0.34.0/geckodriver-v0.34.0-linux64.tar.gz
+        tar -xzf geckodriver-v0.34.0-linux64.tar.gz
+        sudo mv geckodriver /usr/local/bin/
 
-    - name: Send GitHub Action trigger data to Slack workflow
-      id: slack
+    - name: Run Firefox-specific smoke test
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests --headless --firefox --reruns=2 --reruns-delay=2 -m "only_firefox"
+
+    - name: Send Slack notification on failure
       if: failure()
       uses: slackapi/slack-github-action@v1.24.0
       with:
-        # This data can be any valid JSON from a previous step in the GitHub Action
         payload: |
           {
-            "text": "Tests Failed",
-            "property": "Reno",
-            "test_repo": "https://github.com/NYPL/seleniumbase_reno/actions",
-            "failed_tests": "${{ steps.parse_report.outputs.failed_tests }}"
+            "blocks": [
+              {
+                "type": "header",
+                "text": {
+                  "type": "plain_text",
+                  "text": "🚨 DXP RENO - *Test Failed* in smoke-test-results",
+                  "emoji": true
+                }
+              },
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*Repository:* <https://github.com/NYPL/seleniumbase_reno|seleniumbase_reno>\n*Workflow:* ${{ github.workflow }}\n*Branch:* ${{ github.ref_name }}\n*Run:* <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the failed run>"
+                }
+              }
+            ]
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
