--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,10 @@ jobs:
         pip install -r requirements.txt
         pip install -U seleniumbase
 
-    - name: Run smoke tests on Chrome
-      continue-on-error: true
-      run: |
-        pytest examples/nypl_tests --spec --headless -n=6 --reruns=2 --reruns-delay=2 -m "smoke and not only_firefox"
+#    - name: Run smoke tests on Chrome
+#      continue-on-error: true
+#      run: |
+#        pytest examples/nypl_tests --spec --headless -n=6 --reruns=2 --reruns-delay=2 -m "smoke and not only_firefox"
 
     - name: Setup Firefox and Geckodriver
       run: |
