--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Test
 
 on:
-  schedule:
-    - cron: '0 11 * * *'  # At 11:00 AM UTC, every day
+#  schedule:
+#    - cron: '0 11 * * *'  # At 11:00 AM UTC, every day
   workflow_dispatch:
 
 jobs:
