test yml update

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
 
 
     - name: Send Slack notification on failure
-      if: failure()
+      if: ${{ job.status != 'success' }}
       uses: slackapi/slack-github-action@v1.24.0
       with:
         payload: |
@@ -72,3 +72,4 @@ jobs:
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
