--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,31 +44,26 @@ jobs:
       id: run_tests
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests --spec --headless -m test
+        pytest examples/nypl_tests --spec --headless -m test --json-report --json-report-file=report.json
 
-    - name: Send Slack notification on test failure
+    - name: Parse JSON Report
+      id: parse_report
+      if: always()
+      run: |
+        echo "Parsing JSON report..."
+        python -c "import json; import os; f = open('report.json'); report = json.load(f); f.close(); failed_tests = [test['nodeid'] for test in report['tests'] if test['outcome'] == 'failed']; failed_tests_str = ','.join(failed_tests); output_path = os.environ['GITHUB_OUTPUT']; gh_output = open(output_path, 'a'); gh_output.write(f'failed_tests={failed_tests_str}\\n'); gh_output.close()"
+
+    - name: Send GitHub Action trigger data to Slack workflow
+      id: slack
       if: steps.run_tests.outcome != 'success'
       uses: slackapi/slack-github-action@v1.24.0
       with:
         payload: |
           {
-            "blocks": [
-              {
-                "type": "header",
-                "text": {
-                  "type": "plain_text",
-                  "text": "🚨 DXP RENO - *Test Failed* in smoke-test-results",
-                  "emoji": true
-                }
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "*Repository:* <https://github.com/NYPL/seleniumbase_reno|seleniumbase_reno>\n*Workflow:* ${{ github.workflow }}\n*Branch:* ${{ github.ref_name }}\n*Run:* <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the failed run>"
-                }
-              }
-            ]
+            "property": "DXP Reno",
+            "test_repo": "https://github.com/NYPL/seleniumbase_reno/actions",
+            "failed_tests": "${{ steps.parse_report.outputs.failed_tests }}"
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
